[metadata]
name = warmer
version = 0.0.1
description = Warm your computer
summary = Warm your computer
author = momijiame
author_email = amedama.ginmokusei@gmail.com
url = https://github.com/momijiame/warmer
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: Japanese
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    warm = warmer.cmd.warm:main

